@startuml DiagrammeDeClasses_Bibliotheko
' Configuration
skinparam classAttributeIconSize 0
skinparam linetype ortho
skinparam class {
    BackgroundColor LightYellow
    BorderColor Black
    ArrowColor Black
}

' ==================== Modèles de Données (Pydantic) ====================

package "Models" <<Rectangle>> {
    class UserCredentials {
        + username: str
        + password: str
        + email: EmailStr
    }

    class LoginCredentials {
        + username: str
        + password: str
    }

    class DocumentMetadata {
        + title: str
        + author: str
        + parution_date: str
        + is_appropriate: bool
        + is_harmful: bool
        + is_compliant: bool
    }

    class DocumentUploader {
        + username: str
        + upload_date: str
    }

    class ApprovalProcess {
        + status: BookStatus
        + date: str
        + details: str
    }

    class DocumentModeration {
        + approval_process: ApprovalProcess
        + approved_by: list[str]
    }

    class DocumentMarkdown {
        + content: str
    }

    class Document {
        + metadata: DocumentMetadata
        + uploader: DocumentUploader
        + moderation: DocumentModeration
        + markdown: DocumentMarkdown
        + document_id: str | None
        + preview: str | None
        + cover_image: str | None
    }

    enum BookStatus {
        WAITING
        IN_APPROVAL
        IN_QUARANTINE
        OK
        NOK
    }
}

' ==================== Services et API ====================

package "API Layer" <<Rectangle>> {
    class FastAPIApp {
        - title: str = "Bibliotheko API"
        - routers: list[APIRouter]
        + health(): dict
        + add_middleware(CORSMiddleware)
    }

    class "Routers" as Routers {
        + auth_router
        + documents_router
        + moderation_router
        + setup_router
        + admin_router
        + legacy_router
    }
}

' ==================== Services de Domaine ====================

package "Domain Services" <<Rectangle>> {
    class DocumentProcessingService {
        + {static} normalize_metadata(extracted_metadata: dict): tuple
        + {static} determine_compliance(security_analysis: dict, content_analysis: dict): tuple
        + {static} create_document_model(...): Document
        + {static} enrich_document_data(...): dict
        + {static} prepare_response_metadata(...): dict
        + {static} build_success_response(...): dict
    }

    class AuthService {
        + {static} hash_password(password: str, salt: bytes): tuple
        + {static} verify_password(password: str, stored_hash: bytes, salt: bytes): bool
        + {static} encrypt_auth_data(password_hash: bytes, salt: bytes): str
        + {static} decrypt_auth_data(encrypted_auth: str): dict
    }

    class FileValidationService {
        + {static} validate_file_type(content_type: str, allowed_types: list)
        + {static} validate_file_size(data: bytes, max_size: int)
        + {static} validate_and_read_file(file, ...): tuple
    }
}

' ==================== Infrastructure ====================

package "Infrastructure" <<Rectangle>> {
    class PixtralService << (S,#FF7700) Service >> {
        - MODEL: str = "pixtral-large-latest"
        - OCR_MODEL: str = "mistral-ocr-latest"
        + process_pdf(file_name: str, ...): dict
        - _extract_metadata(client: Mistral, text: str): dict
        - _detect_security_prompts(client: Mistral, text: str): dict
        - _check_inappropriate_content(client: Mistral, text: str): dict
        + get_client(): Mistral
    }

    class CryptoManager {
        - key_file: str
        - _fernet: Fernet
        + encrypt(data: bytes): bytes
        + decrypt(data: bytes): bytes
    }

    class RedisManager {
        - _client: Redis
        + get_client(): Redis
    }
}

' ==================== Repositories ====================

package "Repositories" <<Rectangle>> {
    class UserRepository {
        - redis_client: Redis
        + user_exists(username: str): bool
        + get_user_record(username: str): dict
        + add_user(user_record: dict)
        + get_all_users(): list
    }

    class DocumentRepository {
        - redis_client: Redis
        + get_document(doc_id: str): dict
        + add_document(doc_data: dict): str
        + add_document_to_quarantine(doc_data: dict): str
        + move_from_quarantine_to_approved(doc_id: str): bool
    }
}

' ==================== Clients Externes ====================

package "External" <<Rectangle>> {
    class Mistral <<External>>
    class Fernet <<External>>
    class Redis <<External>>
}

' ==================== Relations ====================

FastAPIApp *-- Routers
Routers ..> Document : uses
Routers ..> UserCredentials : uses

DocumentProcessingService ..> Document : creates
DocumentProcessingService ..> DocumentMetadata : creates
Document *-- DocumentMetadata
Document *-- DocumentUploader
Document *-- DocumentModeration
Document *-- DocumentMarkdown
DocumentModeration *-- ApprovalProcess
ApprovalProcess o-- BookStatus

AuthService ..> CryptoManager : uses
DocumentProcessingService ..> PixtralService : uses

UserRepository --> RedisManager : uses
DocumentRepository --> RedisManager : uses
RedisManager --> Redis : uses

PixtralService --> Mistral : uses
CryptoManager --> Fernet : uses

AuthService ..> UserRepository : uses
DocumentProcessingService ..> DocumentRepository : uses

@enduml

